# SentinelProject

./: .gitignore  CMakeLists.txt  README.md  implementation_plan.md  partitions.csv  sdkconfig  sdkconfig.defaults
NODE_2_4/: NODE_2_4.ino  README.md
NODE_3_fixed/: NODE_3_fixed.ino  README.md
NODE_4__6/: NODE_4__6.ino  README.md
components/edge_impulse/: CMakeLists.txt
components/esp-sr/model/: movemodel.py
main/: CMakeLists.txt  blynk.c  blynk.h  config.h  dashboard.html  espnow.c  espnow.h  face_verify.c  face_verify.h  http_client.c  http_client.h  idf_component.yml  main.c  main.cpp  shared_types.h  wifi.c  wifi.h
